# EmulatorCore

./: CMakeLists.txt  Common.h  CoreEmulator.cpp  CoreEmulator.h  README.md
Memory/: MemoryMap.cpp  MemoryMap.h
Memory/Controllers/: InternalMemoryController.cpp  InternalMemoryController.h  MMIORegisterController.cpp  MMIORegisterController.h  MemoryController.h
Processor/: CPU.cpp  CPU.h
